# enforcement-readiness-advisor

./: .gitignore  README.md  analyze_report.py  audit_score.py  check_reputations.py  diagnostics.py  find_reputation_endpoint.py  inspect_api.py  main.py  pyproject.toml  requirements.txt  show_recommendations.py
.github/: copilot-instructions.md
analysis/: approval_workflow.py  path_analysis.py  strategic_recommendations.py  trust_signals.py
config/: api_endpoints.py
data_collection/: api_client.py  collectors.py
llm/: local_llm.py  prompt_templates.py
report/: html_report.py
tests/: test_llm_explanation_generator.py
