[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "enforcement-readiness-advisor"
version = "1.0.0"
description = "Analyzes a Carbon Black App Control environment and produces a readiness score for High Enforcement mode."
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
enforcement-advisor = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "config*", "data_collection*", "llm*", "report*"]
